# RWA-python

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
containers/: Containerfile  Containerfile-legacy  rwa-focal  rwa-jammy  rwa-openmpi-dev
doc/: api.rst  conf.py  faq.rst  index.rst
rwa/: __init__.py  generic.py  hdf5.py  lazy.py  pandas.py  scipy.py  sequence.py  storable.py
tests/: multi-py_compat.sh  py2_py3_compat.sh  test_autoserial_hdf5.py  test_native_hdf5.py  test_pandas.py  test_scipy.py
