[tool.poetry]
name = "rwa"
version = "0.9.2"
description = "HDF5-based serialization library for Python datatypes"
authors = ["François Laurent <francois.laurent@pasteur.fr>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
six = "^1.16.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.2"
h5py = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
